@@ -1,3 +1,7 @@
+SVN trunk (1.1.1+svn):
+ * WML improvements
+   * added a #undef preprocessor directive
+
 Version 1.1.1:
  * campaigns
    * reordered ranks to reflect relevance to game world
